--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "arrowParens": "avoid",
     "semi": false,
     "tabWidth": 4,
-    "printWidth": 120
+    "printWidth": 120,
+    "singleQuote": true
 }
