--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,6 @@ jobs:
         run: |
           yarn
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
-          yarn deploy
+          yarn deploy -- -u "github-actions-bot <support+actions@github.com>"
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
