--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "version": "0.1.0",
   "author": "Ethan Skinner",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^4.7.1",
     "gatsby-image": "^3.11.0",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-manifest": "^4.7.0",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
@@ -18,13 +19,21 @@
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
     "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
+    "react": "18",
     "react-countdown": "^2.3.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "18",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.1.0"
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.2",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.7.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "prettier": "^2.5.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.4.4"
   },
   "license": "0BSD",
   "scripts": {
@@ -33,7 +42,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b main"
+    "deploy": "gatsby build && gh-pages -d public -b main",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
