--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-offline": "^6.3.1",
-    "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
